# MyLspPlugin

./: build.gradle  local.properties
src/main/: AndroidManifest.xml
src/main/assets/: native_init  xposed_init
src/main/cpp/: CMakeLists.txt  native.cpp  native.h  nativeHookMain.cpp.back
src/main/java/com/android/hp/: Entry.java
